--- a/package.json
+++ b/package.json
@@ -6,21 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "web-vitals": "^2.1.0",
     "lint": "next lint"
   },
   "dependencies": {
+    "@anon/actions": "^0.1.1",
+    "@anon/sdk-browser-extension": "^0.6.0",
+    "@anon/sdk-typescript": "^0.6.0",
+    "@anon/sdk-web-link-typescript": "^0.5.1",
+    "@playwright/test": "^1.44.1",
+    "next": "14.2.5",
+    "playwright": "^1.46.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
